--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,170 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  color: #252525;
 }
 
 a {
-    text-decoration: none;
-    color: #252525;
+  text-decoration: none;
+  color: #252525;
 }
 
 .container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 10px;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
 
 .active {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    text-decoration: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-decoration: none;
 }
 
 .nav li:first-child {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 ul {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 li {
-    list-style-type: none;
-    padding: 10px;
-    text-decoration: none;
+  list-style-type: none;
+  padding: 10px;
+  text-decoration: none;
 }
 
 .avatar {
-    height: 50px;
-    border-radius: 25px;
-    margin: 10px;
+  height: 100px;
+  width: 100px;
+  border-radius: 25px;
+  margin: 0 auto;
+}
+
+.user {
+  width: 100%;
+  max-width: 500px;
+  padding: 10px;
+  display: flex;
+  margin: 0 auto;
+  border: 1px solid #dad7d7;
+  border-radius: 5px;
+}
+
+.user-img {
+  width: 125px;
+  margin: auto 5px auto 5px;
+  border-right: 3px solid #dad7d7;
+}
+
+.user-stats {
+  margin: auto auto auto 5px;
+}
+
+.user-score {
+  margin: 5px auto auto auto;
+  text-align: center;
+}
+
+.user-score-text {
+  color: white;
+  padding: 20px 30px 20px 30px;
+  font-size: 25px;
+  border-radius: 50%;
+  background: #00b5d6;
+}
+
+.new-question {
+  width: 100%;
+  max-width: 590px;
+  padding: 10px;
+  display: flex;
+  margin: 0 auto;
+  border: 1px solid #dad7d7;
+  border-radius: 5px;
+}
+
+.question {
+  width: 100%;
+  max-width: 590px;
+  padding: 10px;
+  display: flex;
+  margin: 0 auto;
+  border: 1px solid #dad7d7;
+  border-radius: 5px;
+}
+
+.question-option {
+  width: 95%;
+  max-width: 590px;
+  padding: 10px;
+  display: flex;
+  margin: 0 auto;
+  border: 1px solid #dad7d7;
+  border-radius: 5px;
+  flex-direction: column;
+}
+
+.question-user-info {
+  width: 200px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.question-info {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 100%
+}
+
+.question-progress-bar {
+  border: 1px solid #dad7d7;
+  border-radius: 25px;
+  text-align: center;
+}
+
+.question-progress-bar-fill {
+  border-radius: 25px;
+  background-color: #00b5d6;
+  height: 20px;
+  padding: 3px 0px 1px;
+}
+
+.question-voted-user {
+  color: white;
+  text-align: center;
+  vertical-align: middle;
+  margin: -25px -30px -15px auto;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #00b5d6;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.question-percentile {
+  padding-left: 5px
+}
+
+.question-total-votes {
+  width: 100%;
+  text-align: center;
+  padding: 7px 0 0 0;
+  font-size: 10px;
 }
