--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,8 @@ li {
 }
 
 .login-select {
-  margin: 10px auto 0px auto;
+  margin: 10px auto 10px auto;
+  padding: 10px;
   width: 75%;
   height: 30px;
 }
