--- a/src/index.css
+++ b/src/index.css
@@ -249,6 +249,7 @@ li {
   display: flex;
   flex-direction: column;
   border-right: 3px solid #dad7d7;
+  text-align: center;
 }
 
 .question-info {
